--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,21 +6,24 @@
         xmlns:tools="clr-namespace:PingApp.Tools"
         xmlns:local="clr-namespace:PingApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" MinHeight="450" MinWidth="800"
+        Title="Ping App" Height="450" Width="800" MinHeight="450" MinWidth="800"
         Background="#546A76"
-        Foreground="#F5E9E2">
+        Foreground="#F5E9E2" Icon="/icons8-ping-96.png"
+        >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Label Content="Devices to Ping" Margin="5,0,5,0" Grid.Row="0" Grid.ColumnSpan="2" Width="Auto" Height="Auto" Foreground="#F5E9E2" />
-        <ListView x:Name ="LV_Devices"  Margin="5,0,5,5" Grid.Row="1" Grid.ColumnSpan="2" Width="Auto" Height="Auto" Foreground="#FF010111">
+        <ListView x:Name ="LV_Devices"  Margin="5,0,5,5" Grid.Row="1" Grid.ColumnSpan="2" Width="Auto" Height="Auto" Foreground="#FF010111" 
+                  ItemsSource="{Binding Path=Devices}">
             <ListView.Background>
                 <SolidColorBrush Color="AliceBlue"/>
             </ListView.Background>
@@ -57,7 +60,7 @@
                     <GridViewColumn tools:GridColumn.MinWidth="100" Width="100"  Header="IP Status">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding IPStatus, UpdateSourceTrigger=PropertyChanged}"/>
+                                <TextBlock Text="{Binding IpStatus, UpdateSourceTrigger=PropertyChanged}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -68,24 +71,13 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <!--<GridViewColumn tools:GridColumn.MinWidth="60" Width="60"  Header="To Delete">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <CheckBox Margin="5, 0" IsChecked="{Binding ToDelete, Mode=TwoWay}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn tools:GridColumn.MinWidth="60" Width="60"  Header="Deleted">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <CheckBox Margin="5, 0" IsEnabled="False" IsChecked="{Binding Deleted, Mode=OneWay}"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>-->
                 </GridView>
             </ListView.View>
         </ListView>
         <Button x:Name="B_TriggerAll" Content="Trigger All" Margin="150,0,15,5" Grid.Row="2" Grid.Column="0" Width="150" Height="25" Click="B_TriggerAll_Click" />
-        <Button x:Name="B_RefreshData" Content="Refresh Data" Margin="15,0,150,5" Grid.Row="2" Grid.Column="1" Width="150" Height="25" Click="B_RefreshData_Click"/>
+        <Button x:Name="B_GetDevicesFromExcel" Content="Get Devices from Excel" Margin="15,0,150,5" Grid.Row="2" Grid.Column="1" Width="150" Height="25" Click="B_GetDevicesFromExcel_Click"/>
+        <ScrollViewer Grid.Row="3" Grid.ColumnSpan="4" Margin="5,10,5,10" CanContentScroll="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" Grid.RowSpan="2">
+            <TextBlock x:Name= "TB_Status"  TextWrapping="Wrap"  Height="Auto" Width="Auto" ><Run Language="pl-pl"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
+        </ScrollViewer>
     </Grid>
 </Window>
