--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:tools="clr-namespace:PingApp.Tools"
         xmlns:local="clr-namespace:PingApp"
         mc:Ignorable="d"
-        Title="Ping App" Height="450" Width="800" MinHeight="450" MinWidth="800"
+        Title="Ping App" Height="450" Width="900" MinHeight="450" MinWidth="900"
         Background="#546A76"
         Foreground="#F5E9E2" Icon="/icons8-ping-96.png"
         >
@@ -57,7 +57,7 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn tools:GridColumn.MinWidth="100" Width="100"  Header="IP Status">
+                    <GridViewColumn tools:GridColumn.MinWidth="160" Width="160"  Header="IP Status">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding IpStatus, UpdateSourceTrigger=PropertyChanged}"/>
@@ -75,9 +75,9 @@
             </ListView.View>
         </ListView>
         <Button x:Name="B_TriggerAll" Content="Trigger All" Margin="150,0,15,5" Grid.Row="2" Grid.Column="0" Width="150" Height="25" Click="B_TriggerAll_Click" />
-        <Button x:Name="B_GetDevicesFromExcel" Content="Get Devices from Excel" Margin="15,0,150,5" Grid.Row="2" Grid.Column="1" Width="150" Height="25" Click="B_GetDevicesFromExcel_Click"/>
+        <Button x:Name="B_GetDevicesFromExcel" Content="Get Devices from Excel" Margin="15,0,150,5" Grid.Row="2" Grid.Column="1" Width="150" Height="25" Click="B_GetDevicesFromExcel_ClickAsync"/>
         <ScrollViewer Grid.Row="3" Grid.ColumnSpan="4" Margin="5,10,5,10" CanContentScroll="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" Grid.RowSpan="2">
-            <TextBlock x:Name= "TB_Status"  TextWrapping="Wrap"  Height="Auto" Width="Auto" ><Run Language="pl-pl"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
+            <TextBlock x:Name= "TbStatus"  TextWrapping="Wrap"  Height="Auto" Width="Auto" ><Run Language="pl-pl"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
         </ScrollViewer>
     </Grid>
 </Window>
