--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -76,6 +76,7 @@
         </ListView>
         <Button x:Name="B_TriggerAll" Content="Trigger All" Margin="150,0,15,5" Grid.Row="2" Grid.Column="0" Width="150" Height="25" Click="B_TriggerAll_Click" />
         <Button x:Name="B_GetDevicesFromExcel" Content="Get Devices from Excel" Margin="15,0,150,5" Grid.Row="2" Grid.Column="1" Width="150" Height="25" Click="B_GetDevicesFromExcel_ClickAsync"/>
+        <Button x:Name="B_GetDevicesFromExcelTest" Content="Get Devices from Excel Command" Margin="15,0,-250,5" Grid.Row="2" Grid.Column="3" Width="150" Height="25" Command="{Binding GetDevicesFromExcelCommand}"/>
         <ScrollViewer Grid.Row="3" Grid.ColumnSpan="4" Margin="5,10,5,10" CanContentScroll="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" Grid.RowSpan="2">
             <TextBlock x:Name= "TbStatus"  TextWrapping="Wrap"  Height="Auto" Width="Auto" ><Run Language="pl-pl"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
         </ScrollViewer>
