--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,17 @@
 ﻿<Application x:Class="PingApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PingApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:views="clr-namespace:PingApp.Views"
+             xmlns:viewmodels="clr-namespace:PingApp.ViewModels">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Fluent;component/Themes/Generic.xaml"/>
+                <ResourceDictionary Source="/Styles/LogItems.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <DataTemplate DataType="{x:Type viewmodels:DeviceListViewModel}">
+                <views:DeviceListView/>
+            </DataTemplate>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
