--- a/Views/DeviceListView.xaml
+++ b/Views/DeviceListView.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:tools="clr-namespace:PingApp.Tools"
+             xmlns:converters="clr-namespace:PingApp.Converters"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="900">
+    <UserControl.Resources>
+        <converters:DeviceStatusToStyleConverter x:Key="DeviceStatusToStyleConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
@@ -17,7 +21,12 @@
         </Grid.ColumnDefinitions>
         <Label Content="Devices to Ping" Margin="5,0,5,0" Grid.Row="0" Grid.ColumnSpan="2" Width="Auto" Height="Auto" Foreground="#F5E9E2" />
         <ListView Margin="5,0,5,5" Grid.Row="1" Grid.ColumnSpan="2" Width="Auto" Height="Auto" Foreground="#FF010111" 
-              ItemsSource="{Binding Path=Devices}" ItemContainerStyleSelector="{StaticResource deviceItemStyleSelector}">
+              ItemsSource="{Binding Path=Devices}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Background" Value="{Binding Status, Converter={StaticResource DeviceStatusToStyleConverter}}" />
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.Background>
                 <SolidColorBrush Color="AliceBlue"/>
             </ListView.Background>
