Status bar/Loggs reorganized; Progress bar added to status bar

--- a/App.xaml
+++ b/App.xaml
@@ -14,7 +14,13 @@
             <DataTemplate DataType="{x:Type viewmodels:DeviceListViewModel}">
                 <views:DeviceListView/>
             </DataTemplate>
-            
+            <DataTemplate DataType="{x:Type viewmodels:LoggsViewModel}">
+                <views:LoggsView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewmodels:StatusBarViewModel}">
+                <views:StatusBarView/>
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
