--- a/Views/LogsView.xaml
+++ b/Views/LogsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PingApp.Controls.PingAppStatusBar"
+﻿<UserControl x:Class="PingApp.Views.LoggsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,11 +12,10 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <ScrollViewer Grid.Row="0"
             Height="200" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
-            <ListView ItemsSource="{Binding LogItems}" ItemContainerStyleSelector="{StaticResource logItemStyleSelector}" Margin="0,10,0,0">
+            <ListView ItemsSource="{Binding LogItemsSorted}" ItemContainerStyleSelector="{StaticResource logItemStyleSelector}" Margin="0,10,0,0">
                 <ListView.ItemTemplate>
                     <DataTemplate DataType="events:LogEvent">
                         <StackPanel Orientation="Horizontal">
@@ -30,28 +29,5 @@
                 </ListView.ItemTemplate>
             </ListView>
         </ScrollViewer>
-         <!--Ribbon StatusBar--> 
-        <fluent:StatusBar Grid.Row="1">
-            <fluent:StatusBarItem Title="Left placed item"
-                          Value="150"
-                          HorizontalAlignment="Left">
-                <TextBlock Text="150 px" />
-            </fluent:StatusBarItem>
-
-            <Separator HorizontalAlignment="Left" />
-
-            <fluent:StatusBarItem Title="Second left placed item"
-                          Value="Value shown in ContextMenu"
-                          ToolTip="Your ToolTip"
-                          Content="Content shown in StatusBar"
-                          HorizontalAlignment="Left" />
-
-            <fluent:StatusBarItem Title="Second left placed item"
-                          Value="Value shown in ContextMenu"
-                          ToolTip="Your ToolTip"
-                          Content="{Binding LastLogItem}"
-                          HorizontalAlignment="Right">
-            </fluent:StatusBarItem>
-        </fluent:StatusBar>
     </Grid>
 </UserControl>
