--- a/Controls/PingAppRibbon.xaml
+++ b/Controls/PingAppRibbon.xaml
@@ -39,6 +39,8 @@
                  <!--Status  group-->
                 <fluent:RibbonGroupBox x:Name="GroupPinger" Header="Devices Operations" Width="200">
                     <fluent:Button Header="Trigger All" Command="{Binding TriggerAllCommand}" LargeIcon="Resources/exchange.png"/>
+                    <fluent:Button Header="Config" Command="{Binding UpdateCurrentViewModel}" CommandParameter="{x:Static nav:ViewType.Config}"
+                                   LargeIcon="Resources/excel_config.png"/>
                 </fluent:RibbonGroupBox>
             </fluent:RibbonTabItem>
         </fluent:Ribbon>
